<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SBDataBaseManager</string>
    <string name="widget_query_result">SBDBM - Query Result</string>
    <string name="widget_query_start">SBDBM - Query Start</string>

    <string name="tables">Tables</string>
    <string name="queries">Queries</string>
    <string name="storage">Storage</string>
    <string name="params">Params</string>

    <string name="newQuery">New Query</string>
    <string name="editQuery">Edit Query</string>
    <string name="deleteQuery">Delete Query</string>

    <string name="num">num</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="execute">Execute</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
 
    <string name="charset">Charset</string>
    <string name="defaultValue">Default</string>

    <string name="queryInfo">Bind parameter: #bind_name#, #bind_name:BOOLEAN, #bind_name:TIMESTAMP</string>
    <string name="row">Row</string>

    <string name="view">View</string>
    <string name="structure">Structure</string>

    <string name="viewRow">View Row</string>
    <string name="editRow">Edit Row</string>
    <string name="deleteRow">Delete Row</string>
    <string name="addRow">Add Row</string>
    <string name="exportJSON">Export to JSON</string>
    <string name="importJSON">Import from JSON</string>

    <string name="notImplementedYet">Not Implemented Yet</string>
    <string name="areYouSure">Are You Sure ?</string>
    <string name="pleaseDefineColumns">Please Define Columns</string>
    <string name="readOnly">Read Only</string>
    <string name="selectFile">Select File</string>
    <string name="successfully">Successfully</string>

    <string name="json">JSON</string>
    <string name="mappingColumns">Mapping Columns</string>

    <string name="toAppList">Go To Applications</string>
    <string name="toDbList">Go To Databases</string>

</resources>
