<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:gravity="center_vertical"
			android:padding="5dp"
			android:text="@string/name"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:singleLine="true"
			android:id="@+id/name"/>

	</LinearLayout>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:padding="5dp"
		android:text="@string/query"/>

	<EditText
		android:layout_height="wrap_content"
		android:inputType="textMultiLine"
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:id="@+id/query"
		android:gravity="top|left"/>

	<LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"
            android:id="@+id/save"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/execute"
            android:layout_weight="1"
            android:id="@+id/execute"/>

	</LinearLayout>

    <LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/info"
			android:layout_weight="1"
			android:id="@+id/info"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/cancel"
			android:layout_weight="1"
			android:id="@+id/cancel"/>

	</LinearLayout>

</LinearLayout>

